fixed footer covering up content issue

--- a/src/app/common/footer/footer.component.scss
+++ b/src/app/common/footer/footer.component.scss
@@ -5,6 +5,5 @@ footer {
     left: 0;
     padding: 1rem;
     text-align: center;
-    height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 1px; /* Vertically center the text there */
 }
