--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -13,3 +13,8 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+
+.avatar {
+    border-radius: 50%;
+    width: 100%;
+}
